--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "action-cable-node",
-  "version": "1.2.2",
-  "description": "Action Cable extracted from Rails 5 and packaged as a Node module",
+  "name": "action-cable-react-native",
+  "version": "0.0.0",
+  "description": "Action Cable for react native",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tomchinery/action-cable-node.git"
+    "url": "git+https://github.com/tomchinery/action-cable-react-native.git"
   },
   "keywords": [
     "action",
@@ -16,11 +16,11 @@
     "node",
     "websockets"
   ],
-  "author": "Tom Chinery <hello@tomchinery.com> (http://github.com/tomchinery)",
+  "author": "akinori nakajima <hello@tomchinery.com> (https://github.com/atyenoria/action-cable-react-native)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tomchinery/action-cable-node/issues"
+    "url": "https://github.com/atyenoria/action-cable-react-native/issues"
   },
-  "homepage": "https://github.com/tomchinery/action-cable-node#readme",
+  "homepage": "https://github.com/atyenoria/action-cable-react-native#readme",
   "dependencies": {}
 }
